--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
-							<li><a href="#second">Second Section</a></li>
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#first">Portfolio</a></li>
+							<li><a href="#second">Skills</a></li>
+							<li><a href="#cta">Resume</a></li>
 						</ul>
 					</nav>
 
@@ -66,17 +66,17 @@
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
+										<h3>CloudSound</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
+										<h3>Mastery</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 									<li>
 										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
+										<h3>Taco Tuesday</h3>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
 								</ul>
@@ -128,14 +128,11 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Resume?</h2>
-									<p>Click here to take a look at my resume.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+									<p>Click <a href="Marquis Bentley Resume.pdf">here</a> to take a look at my resume.</p>
+									<ul class="actions">
+										<li></li>
 									</ul>
-								</footer>
+								</header>
 							</section>
 
 					</div>
@@ -150,14 +147,14 @@
 							</ul>
 						</section>
 						<section>
-							<h2>Etiam feugiat</h2>
+							<h2>Contact</h2>
 							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
+								<dt>Location</dt>
+								<dd>San Francisco, CA</dd>
 								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
+								<dd>(408) 839-1529</dd>
 								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
+								<dd><a href="mailto: marquisbentley@gmail.com">marquisbentley@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
 								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
@@ -167,7 +164,7 @@
 								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
-						<p class="copyright">&copy; Untitled.</p>
+						<p class="copyright">&copy; Marquis Bentley.</p>
 					</footer>
 
 			</div>
