--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
 								<dd><a href="mailto: marquisbentley@gmail.com">marquisbentley@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+								<li><a href="https://angel.co/u/marquisbentley" class="icon brands fa-angellist alt"><span class="label">Angel List</span></a></li>
+								<li><a href="https://www.linkedin.com/in/marquisbentley/" class="icon brands fa-linkedin alt"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/codedbyq" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Marquis Bentley.</p>
