--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 							</section>
 
 						<!-- Skills Section -->
+						<!-- Icons from DEVICON -->
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Skills</h2>
