Work on projects section

--- a/index.html
+++ b/index.html
@@ -64,20 +64,47 @@
 									<h2>Recent Projects</h2>
 								</header>
 								<ul class="features">
-									<li>
-										<span class="icon solid major style1 fa-code"></span>
+									<li class="project">
+										<a target="_blank" rel="noopener noreferrer" href="https://cloud-sound.herokuapp.com/#/">
+											<img class="project-img" src="./images/cloudsound.png">
+										</a>
 										<h3>CloudSound</h3>
+										<span>
+											<a target="_blank" rel="noopener noreferrer" href="https://cloud-sound.herokuapp.com/#/">
+												live
+											</a> | <a target="_blank" rel="noopener noreferrer" href="https://github.com/codedbyq/CloudSound">
+												repo
+											</a>
+										</span>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
-									<li>
-										<span class="icon major style3 fa-copy"></span>
+									<li class="project">
+										<a target="_blank" rel="noopener noreferrer" href="https://masteryapp.herokuapp.com/#/">
+											<img class="project-img" src="./images/mastery.png">
+										</a>
 										<h3>Mastery</h3>
+										<span>
+											<a target="_blank" rel="noopener noreferrer" href="https://masteryapp.herokuapp.com/#/">
+												live
+											</a> | <a target="_blank" rel="noopener noreferrer" href="https://github.com/codedbyq/Mastery">
+												repo
+											</a>
+										</span>
 										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
 									</li>
-									<li>
-										<span class="icon major style5 fa-gem"></span>
+									<li class="project">
+										<a target="_blank" rel="noopener noreferrer" href="https://codedbyq.github.io/TacoTuesday/">
+											<img class="project-img" src="./images/tacotuesday.png">
+										</a>
 										<h3>Taco Tuesday</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span>
+											<a target="_blank" rel="noopener noreferrer" href="https://codedbyq.github.io/TacoTuesday/">
+												 live 
+											</a>  |  <a target="_blank" rel="noopener noreferrer" href="https://github.com/codedbyq/TacoTuesday">
+												 repo 
+											</a>
+										</span>
+										<p>Food themed matching game inspired by Lebron James, where the user has to match the ingredients of a customer's order.</p>
 									</li>
 								</ul>
 								<footer class="major">
