Add descriptions and tech used to projects

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 												repo
 											</a>
 										</span>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>CloudSound is a community based, music streaming app inspired by Soundcloud.com, where users can stream music for free
+										or upload music of their own for others to see.</p>
+										<p>Technology used: React.Js, Redux, Ruby on Rails, Jquery, jbuilder, PostgreSQL</p>
 									</li>
 									<li class="project">
 										<a target="_blank" rel="noopener noreferrer" href="https://masteryapp.herokuapp.com/#/">
@@ -90,7 +92,9 @@
 												repo
 											</a>
 										</span>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Mastery is a web application that allows users to master a skill of their choosing, track their progress, and
+										share with friends!</p>
+										<p>Technology used: React.Js, Redux, Express.js, Node.js, MongoDB, Mongoose</p>
 									</li>
 									<li class="project">
 										<a target="_blank" rel="noopener noreferrer" href="https://codedbyq.github.io/TacoTuesday/">
@@ -105,6 +109,7 @@
 											</a>
 										</span>
 										<p>Food themed matching game inspired by Lebron James, where the user has to match the ingredients of a customer's order.</p>
+										<p>Technology used: vanilla JavaScript, vanilla DOM Manipulation, HTML5, CSS3</p>
 									</li>
 								</ul>
 								<footer class="major">
