--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
 										<header class="major">
 											<h2>About Me</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>I am a software engineer with expertise in JavaScript, React, Redux and Ruby on Rails. I love learning new technology
+										and challenging myself to think both logically and creatively.</p>
+										<p>When I'm not programming I am likely playing basketball, reading a book or exploring my creativity through photography,
+										music or writing!</p>
 										<ul class="actions">
 											<li><a href="Marquis Bentley Resume.pdf" class="button">Resume</a></li>
 										</ul>
@@ -344,10 +342,11 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
+							<h2>Marquis Bentley</h2>
+							<p>I am a software engineer with expertise in JavaScript, React, Redux and Ruby on Rails. I love learning new technology
+							and challenging myself to think both logically and creatively.</p>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
+								<li><a href="#intro" class="button">Learn More</a></li>
 							</ul>
 						</section>
 						<section>
