Remove unused button

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 										<p>Technology used: vanilla JavaScript, vanilla DOM Manipulation, HTML5, CSS3</p>
 									</li>
 								</ul>
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 						<!-- Skills Section -->
