Shorten the description for the CloudSound project

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 											</a>
 										</span>
 										<p>CloudSound is a community based, music streaming app inspired by Soundcloud.com, where users can stream music for free
-										or upload music of their own for others to see.</p>
+										or upload music of their own.</p>
 										<p>Technology used: React.Js, Redux, Ruby on Rails, Jquery, jbuilder, PostgreSQL</p>
 									</li>
 									<li class="project">
